deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aws-lb-demo-frontend
  name: aws-lb-demo-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aws-lb-demo-frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: aws-lb-demo-frontend
    spec:
      serviceAccountName: aws-lb-demo
      # Required to read AWS account token
      securityContext:
        fsGroup: 101
      volumes:
        - name: run
          emptyDir:
            medium: Memory
        - name: cache
          emptyDir:
            medium: Memory
      containers:
      - image: 749049578452.dkr.ecr.us-west-2.amazonaws.com/eks-demo-app:latest
        name: webserver
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
        volumeMounts:
          - mountPath: /run
            name: run
          - mountPath: /var/cache
            name: cache
        ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 9080 # PROXY protocol
            protocol: TCP
        readinessProbe:
           httpGet:
             path: /
             port: 8080
        livenessProbe:
           httpGet:
             path: /
             port: 8080
        securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 101
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aws-lb-demo-backend
  name: aws-lb-demo-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aws-lb-demo-backend
  strategy: {}
  template:
    metadata:
      labels:
        app: aws-lb-demo-backend
    spec:
      serviceAccountName: aws-lb-demo
      # Required to read AWS account token
      securityContext:
        fsGroup: 101
      volumes:
        - name: run
          emptyDir:
            medium: Memory
        - name: cache
          emptyDir:
            medium: Memory
      containers:
      - image: 749049578452.dkr.ecr.us-west-2.amazonaws.com/eks-demo-app:latest
        name: webserver
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
        volumeMounts:
          - mountPath: /run
            name: run
          - mountPath: /var/cache
            name: cache
        ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 9080 # PROXY protocol
            protocol: TCP
        readinessProbe:
            httpGet:
              path: /
              port: 8080
        livenessProbe:
            httpGet:
              path: /
              port: 8080
        securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 101
