nlb-services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aws-nlb-ip-demo
  name: aws-nlb-ip-demo
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "aws-nlb-ip.demo.otterley.org"
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb-ip"
spec:
  type: LoadBalancer # Use NodePort on EKS <= 1.17
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: aws-lb-demo-frontend
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aws-nlb-ip-proxyprotocol-demo
  name: aws-nlb-ip-proxyprotocol-demo
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "aws-nlb-ip-proxyproto.demo.otterley.org"
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb-ip"
    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: "*"
spec:
  type: LoadBalancer # Use NodePort on EKS <= 1.17
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9080
  selector:
    app: aws-lb-demo-frontend
#---
#apiVersion: v1
#kind: Service
#metadata:
#  labels:
#    app: aws-nlb-instance-demo
#  name: aws-nlb-instance-demo
#  annotations:
#    # In-tree load balancer that uses Instance-type targets
#    external-dns.alpha.kubernetes.io/hostname: "aws-nlb-instance.demo.otterley.org"
#    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
#spec:
#  type: LoadBalancer
#  ports:
#  - name: http
#    port: 80
#    protocol: TCP
#    targetPort: 8080
#  selector:
#    app: aws-lb-demo-frontend
